# manager

./: README.md
.github/workflows/: tauri.yml
src/: dashboard.html  dashboard.js  index.html  lan.html  lan.js  log.html  log.js  main.js  styles.css  sys.html  sys.js  vpn.html  vpn.js  wan.html  wan.js
src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
