[package]
name = "rsdsl_manager"
version = "0.1.0"
description = "RSDSL Verwaltungswerkzeug"
authors = ["Himbeer"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "http-all", "dialog-message", "dialog-ask", "shell-open", "dialog"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12.5", features = ["json"] }
chrono = { version = "0.4.38", default-features = false, features = ["alloc", "clock"] }
hex = "0.4.3"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
